[gd_scene load_steps=12 format=3 uid="uid://cpimiv0j0cie5"]

[ext_resource type="AudioStream" uid="uid://cxd5ecqalqqdl" path="res://Audio/BGM/FittingTitle/fitting_title_intro.ogg" id="1_djra5"]
[ext_resource type="Script" uid="uid://cbnhof5cc5q8t" path="res://Audio/BGM/FittingTitle/fitting_title.gd" id="1_i7qbf"]
[ext_resource type="Script" uid="uid://dai80ok0ov0ou" path="res://Audio/BGM/FittingTitle/test_signal.gd" id="2_ihn6u"]
[ext_resource type="AudioStream" uid="uid://b7uotjtu1n7cx" path="res://Audio/BGM/FittingTitle/fitting_title_loop.ogg" id="2_o6rhb"]
[ext_resource type="Script" uid="uid://cbyc5xbfw5wbd" path="res://addons/rhythm_notifier/rhythm_notifier.gd" id="2_yqyba"]
[ext_resource type="Script" uid="uid://cjmjux7etpwf3" path="res://Audio/BGM/interactive_song.gd" id="3_udxl2"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_v4tr6"]
clip_count = 2
clip_0/name = &"Intro"
clip_0/stream = ExtResource("1_djra5")
clip_0/auto_advance = 1
clip_0/next_clip = 1
clip_1/name = &"Loop"
clip_1/stream = ExtResource("2_o6rhb")
clip_1/auto_advance = 1
clip_1/next_clip = 1
_transitions = {
Vector2i(0, 1): {
"fade_beats": 0.0,
"fade_mode": 4,
"from_time": 0,
"to_time": 1
}
}

[sub_resource type="Animation" id="Animation_g3ts7"]
resource_name = "Intro"
length = 22.5
step = 0.1172
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Unused")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("1_djra5")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:KICK_ACTIVE")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:DRONE_1_ACTIVE")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(7.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:O_HAT_ACTIVE")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:C_HAT_ACTIVE")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:PLUCK_STRING_ACTIVE")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:SNARE_ACTIVE")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(22.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s8nm1"]
resource_name = "Loop"
length = 270.0
loop_mode = 1
step = 0.1172
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Unused")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_o6rhb")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:ARPEGGIO_ACTIVE")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(15, 75, 165, 225),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:O_HAT_ACTIVE")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(60, 105, 217.5, 255),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:C_HAT_ACTIVE")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(60, 105, 217.5, 255),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:SNARE_ACTIVE")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 60, 120, 165, 195, 210),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:KICK_ACTIVE")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(75, 90, 165, 195, 225, 240),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:PLUCK_STRING_ACTIVE")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(75, 135),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:PIANO_ACTIVE")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(75, 165),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:LEAD_ACTIVE")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(105, 195),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:DRONE_1_ACTIVE")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 165),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".:DRONE_2_ACTIVE")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(165, 225),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:DRONE_1_OCTAVE_UP_ACTIVE")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 45, 75, 120, 165),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_txpl0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:KICK_ACTIVE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:DRONE_1_ACTIVE")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:O_HAT_ACTIVE")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:C_HAT_ACTIVE")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:PLUCK_STRING_ACTIVE")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:SNARE_ACTIVE")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:PIANO_ACTIVE")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:LEAD_ACTIVE")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:DRONE_2_ACTIVE")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:ARPEGGIO_ACTIVE")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".:DRONE_1_OCTAVE_UP_ACTIVE")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1mso"]
_data = {
&"Intro": SubResource("Animation_g3ts7"),
&"Loop": SubResource("Animation_s8nm1"),
&"RESET": SubResource("Animation_txpl0")
}

[node name="FittingTitle" type="Node"]
script = ExtResource("1_i7qbf")

[node name="GridContainer" type="GridContainer" parent="."]
editor_description = "Not usefull, only to control the accuracy of the rythm notifier"
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -11.5
offset_right = 94.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
columns = 5
script = ExtResource("2_ihn6u")

[node name="Kick" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="Drone1" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="Drone2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="OHat" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="CHat" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="Snare" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="PluckString" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="Arpeggio" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="Lead" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
horizontal_alignment = 1

[node name="Piano" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2

[node name="RhythmNotifier" type="Node" parent="."]
script = ExtResource("2_yqyba")
bpm = 128.0
beat_length = 0.46875

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_v4tr6")
max_polyphony = 2
bus = &"BGM"
script = ExtResource("3_udxl2")

[node name="Unused" type="AudioStreamPlayer" parent="."]
bus = &"MuteUtils"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v1mso")
}
next/Intro = &"Loop"
